# StableNew2

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LEARNING_TAB_FIXES_SUMMARY.md  PR_IMPLEMENTATION_SUMMARY.md  README.md  StableNew_Roadmap_v2.1.md  VAE_EMPTY_STRING_FIX.md  WEBUI_INVESTIGATION_CHECKLIST.md  check_webui_process.py  custom_pack_lists.json  img_a.png.review.json  migrate_pack_json.py  package-lock.json  pipeline_config_refs.md  pyproject.toml  pytest.ini  repo_inventory.json  requirements-svd.txt  requirements.txt  ruff_report.json  ruff_report_github.txt  stablenew_snapshot_and_inventory.py  test_all_stage_cards.py  test_heartbeat_stall_fix.py  test_import.py  test_learning_fix.py  test_lora_embed_load.txt  test_lora_embed_pack.json  test_output.txt  test_pack_config_flags.py  test_pipeline_final.py  test_pipeline_tab_render.py  test_pr_hb_001_002.py  test_queue_persistence_fix.py  test_reprocess_batching.py  (+3 more)
.github/: CODEOWNERS  CODEX_SOP.md  INSTRUCTION_SURFACE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
archive/: ARCHIVE_MAP.md  GUI_IMPROVEMENTS_SUMMARY_OLD.md  HEROES_JOURNEY_RESULTS_OLD.md  IMPROVEMENTS_COMPLETE_OLD.md  README.md  READMEV2.md  README_agent_block.md  RESOLUTION_SUMMARY_OLD.md  journey_test_OLD.py  journey_test_heroes_OLD.py  snapshot_tree.md  snapshot_tree.txt  src_contents.md  src_directory.md
data/: embedding_cache.json  job_history.jsonl  lora_cache.json  prompt_templates.json  style_loras.json  webui_cache.json
docs/: AGENTS.md  ARCHITECTURAL_DEBT_ANALYSIS.md  ARCHITECTURE_ENFORCEMENT_CHECKLIST_v2.6.md  ARCHITECTURE_v2.5.md  ARCHITECTURE_v2.6.md  ARCHITECTURE_v2.md  Adetailer Config Recommendations.md  AllPlanFilesCombined(11-24-2025).md  Builder Pipeline Deep-Dive (v2.6).md  CODEX-PROMPT-PR.md  Canonical_Document_Ownership_v2.6.md  Cluster_Compute_Spec_v2.5.md  Codex Safety Briefing (11-27-25).md  Coding_Best_Practices.md  D-FILENAME-001-Variant-Index-Filename-Bug.md  D-GUI-002-Running-Job-Panel-Issues.md  D-GUI-003-Job-History-Display-Issues.md  D-GUI-003-PromptPackBuilder-Randomizer-Integration-Analysis.md  D-GUI-004-Pipeline-Tab-Dark-Mode-UX.md  D-GUI-004-Reprocess-Multi-Folder-Select.md  D-LEARN-002-Execution-Controller-Collision-Analysis.md  D-LEARN-003-Auto-Discovered-Review-Experiments.md  D-MANIFEST-001-Seed-Tracking-Enhancement.md  D-TECH-DEBT-001-Duplicate-Txt2Img-Paths.md  D-TEST-001-Test-Suite-Technical-Debt-Discovery.md  D-VIDEO-001-AnimateDiff-Integration-Discovery.md  D-VIDEO-002-Movie-Clips-Tab-MVP-Discovery.md  D-VIDEO-003-AnimateDiff-Research-Scaffold.md  D-VIDEO-005-SVD-Native-Tab-Discovery.md  D-WEBUI-001-Recovery-Architecture-Analysis.md  DEBUG HUB v2.6.md  DEBUG_HUB_v2.5.md  DEEP_DIVE_IMG2IMG_AND_FILENAME_FIX.md  DOCS_INDEX_v2.5.md  DOCS_INDEX_v2.6.md  E2E_Golden_Path_Test_Matrix_v2.6.md  FINAL_IMPLEMENTATION_SUMMARY_PHASES_3_4.md  FURTHER_CONSIDERATIONS_ANALYSIS.md  Future_Learning_Roadmap_2025-11-26_1115.md  GLOBAL_PROMPT_CHECKBOX_FIX.md  (+101 more)
inventory/: ACTIVE_MODULES.md  LEGACY_CANDIDATES.md  repo_inventory.json  (+1 more)
packs/: A A A.json  (+106 more)
(+2901 files in other folders)
